# Skypro_Kurs5

./: README.md  configpars.py  dbase.py  dbmanager.py  employers.py  main.py  pyproject.toml  queries.sql
