[tool.poetry]
name = "skypro-kurs5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "skypro_kurs5"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
requests = "^2.31.0"
dbmanager = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
